# firmware-tools

./: .version.mk.swp  COPYING-OSL  ChangeLog  Makefile  Makefile-std  Makefile.am  Makefile.in  PKG-INFO  README  autogen.sh  configure  configure.ac  firmware-tools.spec  mkdeb.sh  mkrelease.sh  setup.cfg  setup.py  version.mk
doc/: bootstrap.txt  bootstrap_firmware.8  firmware.conf  inventory_firmware.8  inventory_firmware_gui.8  update_firmware.8  verbosity.txt
etc/firmware/: firmware.conf
firmwaretools/: __init__.py  bootstrap_pci.py  clifuncs.py  config.py  constants.py  decorator.py  dep_parser.py  errors.py  guihelpers.py  i18n.py  mockpackage.py  mockrepository.py  package.py  plugins.py  ply_lex.py  ply_yacc.py  pycompat.py  repository.py  trace_decorator.py
ft-cli/: .cli.py.swp  cli.py  config.py  ftcommands.py  ftmain.py  guihelpers.py
ft-cli/plugins/: bootstrap.py  bootstrap_cmd.py  inventory.py  inventory_cmd.py  listplugins.py  listplugins_cmd.py  update.py  update_cmd.py
glade/: inventory_firmware_gui.glade  inventory_firmware_gui.gladep  update_firmware_gui.glade  update_firmware_gui.gladep
pkg/: ab-host-debian.fwupdate.com-build.sh  ab-host-mock-build.sh  ab-host-mock.sh  autobuild-hook.sh  firmware-tools.spec  firmware-tools.spec.in  mk-rel-deb.sh  mk-rel-rpm.sh  mkdeb.sh  mkrelease.sh  upload-rpm-hook  upload-susebuild.sh
pkg/debian/: changelog  changelog.in  control  copyright  docs  linda.overrides  manpages  postinst  prerm  rules  triggers  watch
pkg/debian/patches/: 00-bootstrap_firmware_manpage.patch  00-inventory_firmware_gui_manpage.patch  00-inventory_firmware_manpage.patch  00-revu.patch  00-update_firmware_manpage.patch
pymod/: bootstrap_pci.py  clifuncs.py  dep_parser.py  mockpackage.py  package.py  pycompat.py  repository.py  trace_decorator.py
pymod/firmwaretools/: dep_parser.py  mockpackage.py  package.py  ply_lex.py
test/: TestLib.py  testAll.py  testDepParser.py  testPackage.py  testPciBootstrap.py  testPycompat.py  testRepository.py
test/datafiles/system_ven_0x5555_dev_0x1234/system_specific-a03/: package.ini
test/datafiles/system_ven_0x5555_dev_0x1234/system_specific-a04/: package.ini
test/datafiles/system_ven_0x5555_dev_0x4321/system_specific-a08/: package.ini
test/datafiles/system_ven_0x5555_dev_0x4321/system_specific-a09/: package.ini
test/datafiles/test_requires-a09/: package.ini
test/datafiles/testorder1-a04/: package.ini
test/datafiles/testorder2-a05/: package.ini
test/datafiles/testorder3-a06/: package.ini
test/datafiles/testpack-a04/: package.ini
test/datafiles/testpack-a05/: package.ini
test/datafiles/testpack-a06/: package.ini
test/datafiles/testpack_another-a04/: package.ini
test/datafiles/testpack_different-a07/: package.ini
test/datafiles/testpack_newpkgstrat-a08/: package.ini
yum-plugin/: firmwaretools_bootstrap.conf  firmwaretools_bootstrap.py
